--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,11 @@
         "psr-4": {
             "ericliao79\\l5allpay\\" : "src",
             "ericliao79\\l5allpay\\Tests\\": "tests"
-        }
+        },
+
+        "files": [
+            "src/tools.php"
+        ]
     },
 
     "require": {
@@ -24,6 +28,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "~6.0",
+        "illuminate/support": "^5.5"
     }
 }
