--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "php": ">=7.1"
+        "php": ">=7.1",
+        "guzzlehttp/guzzle": "^6.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
