--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,3 +23,8 @@ jobs:
           paths:
             - vendor
       - run: ./vendor/bin/phpunit
+  workflows:
+    version: 2
+    build_and_test:
+      jobs:
+        - php71
