migrating circleic 1.0 to 2.0

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,30 @@ jobs:
           paths:
             - vendor
       - run: ./vendor/bin/phpunit
+
+  php70:
+    docker:
+      - image: circleci/php:7.1.8-browsers
+      environment:
+        TZ: "/usr/share/zoneinfo/Asia/Taipei"
+    working_directory: ~/laravel
+    steps:
+      - checkout
+      - run: composer self-update
+      - restore_cache:
+          keys:
+            - composer-v1-{{ checksum "composer.json" }}
+            - composer-v1-
+      - run: composer install -n --prefer-dist
+      - save_cache:
+          key: composer-v1-{{ checksum "composer.json" }}
+          paths:
+            - vendor
+      - run: ./vendor/bin/phpunit
+
 workflows:
   version: 2
-  build_and_test:
+  build:
     jobs:
       - php71
+      - php70
