--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,9 @@
 ## Author:Eric 2017.09.20
 ## Customize the test machine
-
-version: 2
+version: 2.0
 
 jobs:
-  php71:
+  "php-7.1":
     docker:
       - image: circleci/php:7.1.8-browsers
       environment:
@@ -24,7 +23,7 @@ jobs:
             - vendor
       - run: ./vendor/bin/phpunit
 
-  php70:
+  "php-7.0":
     docker:
       - image: circleci/php:7.1.8-browsers
       environment:
@@ -48,5 +47,5 @@ workflows:
   version: 2
   build:
     jobs:
-      - php71
-      - php70
+      - "php-7.1"
+      - "php-7.0"
