--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
     working_directory: ~/laravel
     steps:
       - checkout
-      - run: composer self-update
+      ##- run: composer self-update
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "composer.json" }}
@@ -25,7 +25,7 @@ jobs:
     working_directory: ~/laravel
     steps:
       - checkout
-      - run: composer self-update
+#      - run: composer self-update
       - restore_cache:
           keys:
             - composer-v1-{{ checksum "composer.json" }}
