--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0",
-        "illuminate/support": "^5.5"
+        "illuminate/support": "^5.5",
+        "satooshi/php-coveralls": "^1.0"
     },
     "autoload": {
         "psr-4": {
