--- a/composer.json
+++ b/composer.json
@@ -13,15 +13,15 @@
     "minimum-stability": "stable",
     "require": {
         "php": ">=7.0",
-        "guzzlehttp/guzzle": "^6.3"
+        "guzzlehttp/guzzle": "^6.3",
+        "php-coveralls/php-coveralls": "^1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
         "phpunit/phpunit": "~6.0",
-        "illuminate/support": "^5.5",
-        "satooshi/php-coveralls": "^1.0"
+        "illuminate/support": "^5.5"
     },
     "autoload": {
         "psr-4": {
